# gecko

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile.native  Justfile  README.md
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy-wasm.yml  nightly.yml  release.yml
crates/app/: Cargo.toml
crates/app/src/: app.rs  cache.rs  config.rs  game.rs  library.rs  main.rs  player.rs  theme.rs  widgets.rs
crates/app/src/player/: audio.rs  emu_thread.rs  input.rs  state.rs  widget.rs
crates/app/src/widgets/: badge.rs  cover.rs  game_row.rs  menubar.rs  search_bar.rs  statusbar.rs
crates/backend-wgpu/: Cargo.toml
crates/backend-wgpu/src/: action.rs  capture.rs  clear.rs  dump.rs  gx.wgsl  helpers.rs  lib.rs  pipeline.rs  render.rs  shader_specialization.rs  sink.rs  texture.rs
crates/backend-wgpu/src/shaders/: clear.wgsl  common.wesl  efb_blit.wgsl  efb_depth.wgsl  efb_pack.wgsl  lighting.wesl  main.wesl  tev_helpers.wesl  tev_indirect.wesl
crates/dbglib/: Cargo.toml
crates/dbglib/src/: lib.rs  trace.rs  windows.rs
crates/dbglib/src/windows/: about.rs  callstack.rs  controls.rs  cpu.rs  dsp.rs  dvd.rs  exi.rs  fifo.rs  gx.rs  irq.rs  mmio.rs
crates/debugger/: Cargo.toml
crates/debugger/src/: debugger.rs  main.rs  render.rs
crates/debugger/src/windows/: controls.rs  cpu.rs  exi.rs  gx.rs  irq.rs  mmio.rs
crates/dff/: Cargo.toml
crates/dff/src/: lib.rs
crates/disasm/: Cargo.toml  build.rs
crates/disasm/src/: lib.rs
crates/dspemu/: Cargo.toml
crates/dsptestrunner/src/: main.rs
crates/fifoplayer/: Cargo.toml
crates/fifoplayer/src/: main.rs  playback.rs
crates/gctool/: Cargo.toml
crates/gctool/src/: cli.rs  disassembly.rs  dol.rs  ipl.rs  iso.rs  main.rs
crates/gecko/: Cargo.toml  build.rs  dsp.bindings.chipi  wii.bindings.chipi
crates/gecko/spec/: dsp.bindings.chipi  dsp_jit.bindings.chipi  gekko.bindings.chipi  gekko_jit.bindings.chipi  wii_dsp.bindings.chipi  wii_gekko.bindings.chipi  wii_gekko_jit.bindings.chipi
crates/gecko/src/: audio.rs  cpu.rs  dvd.rs  flipper.rs  fps.rs  gamecube.rs  gekko.rs  hollywood.rs  host.rs  idle.rs  input.rs  jit_cache.rs  lib.rs  mmio.rs  profile.rs  scheduler.rs  scripting.rs  starlet.rs  system.rs  wii.rs
crates/gecko/src/audio/: wav.rs
crates/gecko/src/cpu/: condition.rs  dec.rs  interpreter.rs  irq.rs  msr.rs  semantics.rs  spr.rs  sr.rs
crates/gecko/src/cpu/interpreter/: alu.rs  branch.rs  compare.rs  cr_ops.rs  fp_ops.rs  ps_ops.rs  psq.rs  rotate.rs  store_load.rs  stubs.rs  system.rs
crates/gecko/src/dvd/: regs.rs
crates/gecko/src/flipper/: ai.rs  cp.rs  dsp.rs  exi.rs  gx.rs  mi.rs  pe.rs  pi.rs  si.rs  vi.rs
crates/gecko/src/flipper/ai/: regs.rs
crates/gecko/src/flipper/cp/: regs.rs
crates/gecko/src/flipper/dsp/: accelerator.rs  addr.rs  core.rs  instruction.rs  interpreter.rs  jit.rs  regs.rs
crates/gecko/src/flipper/dsp/jit/: abi.rs  block.rs  runtime.rs  translate.rs  translator.rs
crates/gecko/src/flipper/exi/: device.rs  macronix.rs  regs.rs
crates/gecko/src/flipper/gx/: bp.rs  constants.rs  draw.rs  fifo.rs  jit.rs  math.rs  recorder.rs  regs.rs  texgen.rs  texture.rs  vertex.rs  xf.rs
crates/gecko/src/flipper/gx/jit/: attr.rs  builder.rs  runtime.rs  validate.rs
crates/gecko/src/flipper/mi/: regs.rs
crates/gecko/src/flipper/pe/: regs.rs
crates/gecko/src/flipper/pi/: regs.rs
crates/gecko/src/flipper/si/: pad.rs  regs.rs
crates/gecko/src/flipper/vi/: regs.rs
crates/gecko/src/gekko/: cycles.rs  dec.rs  instruction.rs  interpreter.rs  irq.rs  jit.rs  spr.rs
crates/gecko/src/gekko/interpreter/: alu.rs  branch.rs  compare.rs  cr_ops.rs  fp_ops.rs  ps_ops.rs  psq.rs  rotate.rs  store_load.rs  system.rs
crates/gecko/src/gekko/jit/: abi.rs  block.rs  handlers.rs  idle.rs  insn.rs  runtime.rs  translator.rs
crates/gecko/src/hollywood/: ipc.rs  irq.rs  regs.rs
crates/gecko/src/hollywood/ipc/: di.rs  es.rs  fs.rs  sdio.rs  stm.rs  sysconf.rs  usb.rs
crates/gecko/src/hollywood/ipc/fs/: host.rs  nand.rs
crates/gecko/src/hollywood/ipc/stm/: eventhook.rs  immediate.rs
crates/gecko/src/hollywood/ipc/usb/: bluetooth.rs  crypto.rs  l2cap.rs  wiimote.rs
crates/gecko/src/mmio/: bus.rs  constants.rs  fp.rs  macros.rs  tests.rs  traits.rs
crates/gecko/src/wii/: ios.rs
crates/gekko/: Cargo.toml  build.rs
crates/gekko/src/: cpu.rs  exi.rs  flipper.rs  gekko.rs  lib.rs  mmio.rs  scheduler.rs  vi.rs
crates/gekko/src/cpu/: condition.rs  interpreter.rs  irq.rs  semantics.rs
crates/gekko/src/cpu/interpreter/: branch.rs  fp_ops.rs  store_load.rs  stubs.rs  (+1 more)
crates/gekko/src/exi/: regs.rs
crates/gekko/src/flipper/: di.rs  dsp.rs  gx.rs  pe.rs  pi.rs  vi.rs
crates/gekko/src/mmio/: bus.rs  constants.rs  macros.rs  tests.rs  traits.rs
crates/gekko/src/vi/: regs.rs  tests.rs
crates/image/: Cargo.toml
crates/image/src/: banner.rs  dol.rs  dvd.rs  idb.rs  iso.rs  lib.rs  loader.rs  rvz.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: boot.rs  lib.rs  main.rs  server.rs  sink.rs  state.rs  worker.rs
crates/multitool/src/: cli.rs  dvd.rs  ipl.rs  main.rs  setting.rs  sysconf.rs
crates/screenshotter/: Cargo.toml
crates/screenshotter/src/: main.rs
crates/scripting/: Cargo.toml
crates/scripting/src/: lib.rs
crates/tinyapp/: Cargo.toml
crates/tinyapp/src/: app.rs  audio.rs  main.rs  thread.rs  xfb.wgsl
crates/tinybench/: Cargo.toml
crates/tinybench/src/: main.rs
crates/tinyemu/: Cargo.toml
crates/tinyemu/src/: dump.rs  main.rs  snaptshot.rs
crates/tinytracer/: Cargo.toml
crates/tinytracer/src/: dump.rs  main.rs
crates/web/: Cargo.toml  index.html
crates/web/src/: debug_ui.rs  lib.rs
docs/: dff.typ
other/: build_index.py  game_index.json  game_index_wii.json  game_index_wii.txt  gamelist.py  gamelist.txt  gamelist_wii.txt  screenshots.py
other/ida/: apploader_loader.py
other/roms/: silentskate.dol
roms/: panda.dol.i64
scripts/: apploader_osreport.lua  bs2_dvd_state_logger.lua  dvd_timecheck.lua  example.lua  ff_logger.lua  ipl_state_dump.lua  template.lua
(+9 files in other folders)
