[workspace]
resolver = "3"
members = [
    "crates/multitool",
    "crates/disasm",
    "crates/gecko",
    "crates/image",
    "crates/tinyapp",
    "crates/backend-wgpu",
    "crates/scripting",
    "crates/dbglib",
    "crates/debugger",
    "crates/mcp",

    # Stuff we rarely use
    "crates/dsptestrunner",
    "crates/screenshotter",
    "crates/dspemu",
    "crates/tinytracer",
    "crates/tinybench",
]
default-members = [
    "crates/multitool",
    "crates/disasm",
    "crates/gecko",
    "crates/image",
    "crates/tinyapp",
    "crates/backend-wgpu",
    "crates/scripting",
    "crates/mcp",
]

exclude = [
    # Built separately with wasm-pack for wasm32-unknown-unknown.
    "crates/web",
]

[patch.crates-io]
egui = { git = "https://github.com/ioncodes/egui.git" }
epaint = { git = "https://github.com/ioncodes/egui.git" }
emath = { git = "https://github.com/ioncodes/egui.git" }
ecolor = { git = "https://github.com/ioncodes/egui.git" }
egui-wgpu = { git = "https://github.com/ioncodes/egui.git" }
egui-winit = { git = "https://github.com/ioncodes/egui.git" }

[profile.release]
codegen-units = 1
lto = "fat"
debug = true
# panic = "abort"

[profile.dev]
opt-level = 3
