[package]
name = "gecko-app"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "gecko"
path = "src/main.rs"

[dependencies]
image = { path = "../image" }
gecko = { path = "../gecko" }
backend-wgpu = { path = "../backend-wgpu" }
wgpu = "29.0.3"
cpal = "0.17.3"
ringbuf = "0.5.0"
spin_sleep = "1.3.3"
iced = { git = "https://github.com/iced-rs/iced.git", rev = "0d12e964da8c3f0f7a02d3d731e3187eecfe5779", features = ["tokio", "advanced", "image"] }
iced_aw = { git = "https://github.com/ioncodes/iced_aw.git", rev = "0d6fe5f62ea12bfbbc97bf7076cc6063acf23c3f", default-features = false, features = ["menu"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "fs", "macros", "sync"] }
futures = { version = "0.3.32", default-features = false, features = ["std", "async-await"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_bytes = "0.11.19"
bincode = { version = "2.0.1", default-features = false, features = ["serde", "std"] }
toml = "1.1.2"
walkdir = "2.5.0"
rfd = { version = "0.17.2", default-features = false, features = ["xdg-portal"] }
tracing = { version = "0.1.44", features = ["release_max_level_off"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
clap = { version = "4.6.1", features = ["derive"] }
anyhow = "1.0.102"
webbrowser = "1.0.5"
