[package]
name = "backend-wgpu"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "28.0.0"
bytemuck = { version = "1.25.0", features = ["derive"] }
gecko = { path = "../gecko" }
wesl = "0.3.2"
encase = "0.12.0"
glam = { version = "0.32.1", features = ["encase"] }
crossbeam-channel = "0.5.15"
tracing = "0.1.44"

[build-dependencies]
wesl = "0.3.2"
