[package]
name = "backend-wgpu"
version = "0.1.0"
edition = "2024"

[features]
renderdoc-capture = ["dep:renderdoc"]
hotpath = ["dep:hotpath", "hotpath/hotpath", "hotpath/crossbeam"]

[dependencies]
wgpu = "29.0.3"
bytemuck = { version = "1.25.0", features = ["derive"] }
gecko = { path = "../gecko", default-features = false }
chapa = "0.1.2"
wesl = "0.3.2"
glam = { version = "0.32.1", features = ["bytemuck"] }
crossbeam-channel = "0.5.15"
tracing = "0.1.44"
rustc-hash = "2.1.2"
png = "0.18.1"
renderdoc = { version = "0.12.1", optional = true }
hotpath = { version = "0.16.0", optional = true }
