[package]
name = "debugger"
version = "0.1.0"
edition = "2024"

[features]
scripting-mut-traps = ["gecko/scripting-mut-traps", "scripting/scripting-mut-traps"]

[dependencies]
gecko = { path = "../gecko", features = ["scripting"] }
scripting = { path = "../scripting" }
image = { path = "../image" }
disasm = { path = "../disasm" }
backend-wgpu = { path = "../backend-wgpu" }
wgpu = "28.0.0"
winit = "0.30"
pollster = "0.4"
egui = "0.33"
egui-wgpu = "0.33"
egui-winit = { version = "0.33", features = ["wayland", "x11"] }
egui_material_icons = "0.5.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
