[package]
name = "debugger"
version = "0.1.0"
edition = "2024"

[features]
scripting-mut-traps = ["gecko/hooks-mut-traps", "scripting/hooks-mut-traps"]
renderdoc-capture = ["backend-wgpu/renderdoc-capture"]

[dependencies]
gecko = { path = "../gecko", features = ["hooks", "audio-wav-dump"] }
scripting = { path = "../scripting" }
image = { path = "../image", features = ["symbols"] }
dbglib = { path = "../dbglib" }
backend-wgpu = { path = "../backend-wgpu" }
crossbeam-channel = "0.5.15"
ctrlc = "3.5.2"
wgpu = "28.0.0"
winit = "0.30.13"
pollster = "0.4.0"
egui = "0.33.3"
egui-wgpu = "0.33.3"
egui-winit = { version = "0.33.3", features = ["wayland", "x11"] }
egui-phosphor = { version = "0.11.0", features = ["fill"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
clap = { version = "4.6.0", features = ["derive"] }
