[package]
name = "fifoplayer"
version = "0.1.0"
edition = "2024"

[dependencies]
dff = { path = "../dff" }
gecko = { path = "../gecko" }
backend-wgpu = { path = "../backend-wgpu" }
clap = { version = "4.6.1", features = ["derive"] }
pollster = "0.4.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
wgpu = "29.0.3"
winit = "0.30.13"
