[package]
name = "gecko"
version = "0.1.0"
edition = "2024"

[features]
idle-skip = []
hooks = []
hooks-mut-traps = ["hooks"]
# Full EFB-to-texture writeback: the renderer reads the EFB back, encodes
# it in the GX copy format, and ships the bytes over a channel to the emu
# thread which copies them into `Mmio::ram` synchronously. Expensive (GPU
# stall, encode, RAM copy).
efb-writeback = ["dep:crossbeam-channel"]

[build-dependencies]
chipi-build = "0.9.1"

[dependencies]
chapa = "0.1.2"
tracing = { version = "0.1.44", features = ["release_max_level_off"] }
image = { path = "../image", default-features = false }
disasm = { path = "../disasm" }
glam = { version = "0.32.1", features = ["bytemuck"] }
bytemuck = { version = "1.25.0", features = ["derive"] }
twox-hash = "2.1.2"
crossbeam-channel = { version = "0.5.15", optional = true }
multiversion = "0.8.0"
rustc-hash = "2.1.2"
crc32fast = "1.5.0"
