[package]
name = "gecko"
version = "0.1.0"
edition = "2024"

[features]
default = ["jit", "idle-skip"]
idle-skip = []
hooks = []
hooks-mut-traps = ["hooks"]
# Full EFB-to-texture writeback: the renderer reads the EFB back, encodes
# it in the GX copy format, and ships the bytes over a channel to the emu
# thread which copies them into `Mmio::ram` synchronously. Expensive (GPU
# stall, encode, RAM copy).
efb-writeback = []
# Enable the WAV file audio sink
audio-wav-dump = ["dep:hound"]
# Cranelift JIT for Gekko
jit = [
    "dep:cranelift-codegen",
    "dep:cranelift-frontend",
    "dep:cranelift-jit",
    "dep:cranelift-module",
    "dep:cranelift-native",
]
jit-stats = ["jit", "dep:backtrace"]
# Run both interpreter and JIT for every draw call, reports drift
vtx-jit-validate = ["jit", "gx-stats"]
fps-counter = []
gx-stats = []
profile = ["dep:backtrace", "dep:windows-sys"]
# Enables std::hint::black_box inside `EmptyRenderSink::exec`
rendersink-blackbox = []

[build-dependencies]
chipi-build = "0.9.1"

[dependencies]
chapa = "0.1.2"
tracing = { version = "0.1.44", features = ["release_max_level_off"] }
image = { path = "../image", default-features = false }
disasm = { path = "../disasm" }
glam = { version = "0.32.1", features = ["bytemuck"] }
bytemuck = { version = "1.25.0", features = ["derive"] }
twox-hash = "2.1.2"
crossbeam-channel = "0.5.15"
hound = { version = "3.5.1", optional = true }
multiversion = "0.8.0"
rustc-hash = "2.1.2"
crc32fast = "1.5.0"
zerocopy = { version = "0.8.48", features = ["derive"] }
cranelift-codegen = { version = "0.131.1", optional = true }
cranelift-frontend = { version = "0.131.1", optional = true }
cranelift-jit = { version = "0.131.1", optional = true, features = ["selinux-fix"] }
cranelift-module = { version = "0.131.1", optional = true }
cranelift-native = { version = "0.131.1", optional = true }
backtrace = { version = "0.3", optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Kernel",
], optional = true }
