[package]
name = "image"
version = "0.1.0"
edition = "2024"

[features]
default = ["symbols", "rvz", "banner"]
symbols = ["dep:idb-rs", "dep:object"]
rvz = ["dep:zstd"]
banner = []

[dependencies]
idb-rs = { git = "https://github.com/ioncodes/idb-rs.git", optional = true }
object = { version = "0.36.7", default-features = false, features = ["elf", "read"], optional = true }
zerocopy = { version = "0.8.48", features = ["derive"] }
zstd = { version = "0.13.3", optional = true }
zip = { version = "8.5.1", default-features = false, features = ["deflate"] }
tracing = "0.1.44"
