[package]
name = "tinyemu"
version = "0.1.0"
edition = "2024"

[dependencies]
gekko = { path = "../gekko" }
image = { path = "../image" }
colored = "3.1.1"
disasm = { path = "../disasm" }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
base64 = "0.22"
clap = { version = "4.6.0", features = ["derive"] }
