[package]
name = "tinyemu"
version = "0.1.0"
edition = "2024"

[features]
idle-skip = ["gecko/idle-skip"]
scripting = ["gecko/scripting", "dep:scripting"]
scripting-mut-traps = ["scripting", "gecko/scripting-mut-traps", "scripting/scripting-mut-traps"]

[dependencies]
gecko = { path = "../gecko" }
scripting = { path = "../scripting", optional = true }
image = { path = "../image" }
colored = "3.1.1"
disasm = { path = "../disasm" }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
base64 = "0.22.1"
clap = { version = "4.6.0", features = ["derive"] }
