[package]
name = "web"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[features]
debug = ["dep:dbglib", "dep:egui-phosphor"]

[dependencies]
gecko = { path = "../gecko", default-features = false }
image = { path = "../image", default-features = false }
backend-wgpu = { path = "../backend-wgpu" }
dbglib = { path = "../dbglib", optional = true }
egui-phosphor = { version = "0.12.0", optional = true, features = ["fill"] }
wgpu = "29.0.3"
winit = { version = "0.30.13", features = ["rwh_06"] }
egui = "0.34.2"
egui-wgpu = "0.34.2"
egui-winit = { version = "0.34.2", default-features = false, features = ["links"] }
wasm-bindgen = "0.2.117"
wasm-bindgen-futures = "0.4.67"
web-sys = { version = "0.3.94", features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
    "HtmlInputElement",
    "File",
    "FileReader",
    "Blob",
    "Event",
    "Performance",
    "console",
] }
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.3", features = ["wasm_js"] }
